--- a/index.html
+++ b/index.html
@@ -41,5 +41,16 @@
 <a href="Appel_Community_Edition.html">Play</a><br>
 <p>Appel Community Edition is a mod of Appel that adds more features not allowed on Scratch.</p>
 </div>
+</div>
+<h2><a data-toggle="collapse" href="#collapseappelm">Appel Multiplayer</a></h2>
+<div id="collapseappelm" class="panel-collapse collapse">
+<a href="Appel_Multiplayer.html">Play</a><br>
+<p>Appel Multiplayer is a mod of Appel that adds multiplayer features and mobile support.</p>
+</div>
+    <script>
+  if (typeof navigator.serviceWorker !== 'undefined') {
+    navigator.serviceWorker.register('sw.js')
+  }
+</script>
 </body>
 </html>
