--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <!-- jQuery library -->
 <script src="jquery.min.js"></script>
 
+    <link rel="manifest" href="manifest.json" />
+
 <!-- Latest compiled JavaScript -->
 <script src="bootstrap.min.js"></script>
     <link rel="stylesheet" href="main.css">
@@ -44,7 +46,7 @@
 </div>
 <h2><a data-toggle="collapse" href="#collapseappelm">Appel Multiplayer</a></h2>
 <div id="collapseappelm" class="panel-collapse collapse">
-<a href="Appel_Multiplayer.html">Play</a><br>
+<a href="Appel%20Multiplayer%20v2.0.html">Play</a><br>
 <p>Appel Multiplayer is a mod of Appel that adds multiplayer features and mobile support.</p>
 </div>
     <script>
