--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <div id="collapseappelm" class="panel-collapse collapse">
 <a href="Appel%20Multiplayer%20v2.0.html">Play</a><br>
 <p>Appel Multiplayer is a mod of Appel that adds multiplayer features and mobile support.</p>
-    <h2><a data-toggle="collapse" href="#collapseappelce">Amazing Appel</a></h2>
-<div id="collapseappelce" class="panel-collapse collapse">
+<h2><a data-toggle="collapse" href="#collapseappelamazing">Amazing Appel</a></h2>
+<div id="collapseappelamazing" class="panel-collapse collapse">
 <a href="Amazing%Appel%v1.4.7$(1).html">Play</a><br>
 <p>Amazing Appel is in the single greatest mod in the universe</p>
 </div>
