--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
 <h2><a data-toggle="collapse" href="#collapseappelamazing">Amazing Appel</a></h2>
 <div id="collapseappelamazing" class="panel-collapse collapse">
-<a href="Amazing%Appel%v1.4.7$(1).html">Play</a><br>
+<a href="Amazing%20Appel%20v1.4.7%20(1).html">Play</a><br>
 <p>Amazing Appel is in the single greatest mod in the universe</p>
 </div>
     <script>
